# rail-sim

./: .gitignore  pyproject.toml
docs/: plan.md
rail_sim/: calibrate.py  cli.py  darwin_baseline.py  model.py  observations.py  sim.py  validate.py
rail_sim/parsers/: bplan.py  corpus.py
tests/: test_darwin_baseline.py  test_parsers.py  test_sim.py
