[project]
name = "rail-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rail-sim = "rail_sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rail_sim"]

[project.optional-dependencies]
dev = ["pytest>=7"]
